<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        style="@style/LOGIN"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/uss"
        style="@style/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        style="@style/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass2"
        style="@style/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ulangi_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register1"
        tools:ignore="DuplicateSpeakableTextCheck" />
    <TextView
        style="@style/signUp"
        android:text="@string/login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>