<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<TextView
    android:text="@string/login"
    style="@style/LOGIN"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        style="@style/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/button1"
        android:text="@string/login3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/signUp"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>